Updated images; recovered from mrradbnew.