@@ -9,20 +9,25 @@
     <artifactId>mrradb</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>mrradb</name>
+    <packaging>jar</packaging>
 
     <properties>
+        <appMainClass>DbApplication</appMainClass>
+        <appModule>net.stumpwiz.mrradb</appModule>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <version.glisten>6.2.2</version.glisten>
-        <version.javafx>19</version.javafx>
+        <!--        <version.glisten>6.2.2</version.glisten>-->
+        <version.javafx>23-ea+22</version.javafx>
         <version.javafx.maven>0.0.8</version.javafx.maven>
-        <version.jetbrains>23.0.0</version.jetbrains>
-        <version.jooq>3.17.5</version.jooq>
-        <version.junit>5.9.0</version.junit>
+        <version.jetbrains>24.1.0</version.jetbrains>
+        <version.jooq>3.19.8</version.jooq>
+        <version.jpackage>1.6.2</version.jpackage>
+        <version.junit>5.11.0-M2</version.junit>
         <version.maven.compile>3.8.1</version.maven.compile>
         <version.maven.config>17</version.maven.config>
-        <version.mysql>8.0.30</version.mysql>
-        <version.sl4j>2.0.4</version.sl4j>
+        <version.maven.jar>3.4.1</version.maven.jar>
+        <version.mysql>8.0.33</version.mysql>
+        <version.sl4j>2.0.13</version.sl4j>
     </properties>
 
     <dependencies>
@@ -38,7 +43,6 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${version.javafx}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
         <dependency>
             <groupId>org.jooq</groupId>
@@ -63,22 +67,12 @@
             <artifactId>jooq-codegen-maven</artifactId>
             <version>${version.jooq}</version>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${version.mysql}</version>
         </dependency>
-
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.gluonhq/charm-glisten &ndash;&gt;
-                <dependency>
-                    <groupId>com.gluonhq</groupId>
-                    <artifactId>charm-glisten</artifactId>
-                    <version>${version.glisten}</version>
-                </dependency>-->
-
-
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -99,7 +93,6 @@
             <version>${version.jetbrains}</version>
             <scope>compile</scope>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -107,14 +100,75 @@
             <version>${version.sl4j}</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.panteleyev/jpackage-maven-plugin -->
+        <dependency>
+            <groupId>org.panteleyev</groupId>
+            <artifactId>jpackage-maven-plugin</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>${version.maven.jar}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>target/generated-sources/jooq</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
-                <groupId>org.jreleaser</groupId>
-                <artifactId>jreleaser-maven-plugin</artifactId>
-                <version>1.0.0-RC2</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${version.maven.jar}</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>net.stumpwiz.mrradb.DbApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>${version.jpackage}</version>
+
+                <configuration>
+                    <name>Application Name</name>
+                    <appVersion>${project.version}</appVersion>
+                    <vendor>app.org</vendor>
+                    <module>${appModule}/${appMainClass}</module>
+                    <modulePaths>
+                        <modulePath>target/mods</modulePath>
+                    </modulePaths>
+                    <destination>target/dist</destination>
+                    <javaOptions>
+                        <option>--enable-preview</option>
+                        <option>-Dfile.encoding=UTF-8</option>
+                    </javaOptions>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>mac</id>
+                        <configuration>
+                            <icon>icons/icons.icns</icon>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>win</id>
+                        <configuration>
+                            <icon>icons/icon.ico</icon>
+                            <winMenu>true</winMenu>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -169,9 +223,9 @@
                 <configuration>
                     <jdbc>
                         <driver>com.mysql.cj.jdbc.Driver</driver>
-                        <url>jdbc:mysql://trilda:3306/raj</url>
+                        <url>jdbc:mysql://blacksun:3306/raj</url>
                         <user>rajadmin</user>
-                        <password>password</password>
+                        <password>rajadmin</password>
                     </jdbc>
                     <generator>
                         <name>org.jooq.codegen.JavaGenerator</name>
@@ -190,8 +244,8 @@
                             <pojosToString>false</pojosToString>
                         </generate>
                         <target>
-                            <packageName>net.stumpwiz.mrradb.model</packageName>
-                            <directory>C:\Users\Geo\OneDrive\Git\mrradb\src\main\java</directory>
+                            <packageName>net.stumpwiz.mrradb.generated</packageName>
+                            <directory>target/generated-sources/jooq</directory>
                         </target>
                     </generator>
                 </configuration>
